--- a/1 - EDA.ipynb
+++ b/1 - EDA.ipynb
@@ -19,11 +19,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ba94ddb",
    "metadata": {},
    "source": [
-    "### Importing important libraries"
+    "### Importing important libraries "
    ]
   },
   {
